--- a/reference/User.v1.yaml
+++ b/reference/User.v1.yaml
@@ -3,7 +3,8 @@ info:
   title: User
   version: 1.1.1
 servers:
-  - url: 'http://localhost:3000'
+  - url: 'https://api.counterbalance.io'
+    description: Core API
 paths:
   /v1/user:
     get:
