--- a/reference/User.v1.yaml
+++ b/reference/User.v1.yaml
@@ -173,7 +173,7 @@ paths:
                 - family_name
                 - email
                 - type
-        description: ''
+        description: Request body description...
   '/v1/user/{userId}':
     parameters:
       - schema:
