--- a/reference/User.v1.yaml
+++ b/reference/User.v1.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: Users
   version: 1.1.1
-  description: ''
+  description: Create and manage user accounts
 servers:
   - url: 'https://api.counterbalance.io'
     description: Core API
@@ -148,6 +148,8 @@ paths:
                   value: {}
           headers: {}
       operationId: get-v1-user
+      security:
+        - Bearer Token: []
     post:
       summary: Create a New User
       operationId: post-v1-user
@@ -194,6 +196,8 @@ paths:
                 - type
         description: Request body description...
       parameters: []
+      security:
+        - Bearer Token: []
   '/v1/user/{userId}':
     parameters:
       - schema:
@@ -202,7 +206,7 @@ paths:
         name: userId
         in: path
         required: true
-        description: The UUID of the user
+        description: The user's UUID
     get:
       summary: Get User by ID
       tags: []
@@ -210,6 +214,8 @@ paths:
       operationId: get-v1-user-userId
       parameters: []
       description: Retrieve a user account by ID
+      security:
+        - Bearer Token: []
     patch:
       summary: Update User by ID
       operationId: patch-v1-user-userId
@@ -246,8 +252,10 @@ paths:
                 preferred_given_name:
                   type: string
                   description: The user's preferred first name
+      security:
+        - Bearer Token: []
     delete:
-      summary: Delete a User by ID
+      summary: Delete User by ID
       operationId: delete-v1-user-userId
       responses:
         '204':
@@ -257,6 +265,8 @@ paths:
               schema:
                 type: 'null'
       description: Delete a user by ID
+      security:
+        - Bearer Token: []
   '/v1/user/{userId}/license':
     parameters:
       - schema:
@@ -265,15 +275,87 @@ paths:
         name: userId
         in: path
         required: true
-        style: matrix
-        description: The UUID of the user to license
+        description: The user's UUID
     put:
       summary: Attach User Licensing
       operationId: put-v1-user-userId-license
+      responses: {}
+      description: Assign user licensing
+      security:
+        - Bearer Token: []
+  '/v1/user/{userId}/photo':
+    parameters:
+      - schema:
+          type: string
+          format: uuid
+        name: userId
+        in: path
+        required: true
+        description: The user's UUID
+    get:
+      summary: Get User Photo by ID
+      tags: []
       responses:
         '200':
           description: OK
-      description: Assign user licensing
+          headers: {}
+      operationId: get-v1-user-userId-photo
+      description: Get a user's avatar photo by ID
+      parameters: []
+  '/v1/user/{userId}/roles':
+    parameters:
+      - schema:
+          type: string
+          format: uuid
+        name: userId
+        in: path
+        required: true
+        description: The user's UUID
+    get:
+      summary: Get User's Assigned Roles
+      tags: []
+      responses: {}
+      operationId: get-v1-user-userId-roles
+      description: Retrieve a list of roles assigned to a user
+      security:
+        - Bearer Token: []
+      parameters: []
+    put:
+      summary: Assign User Roles
+      operationId: put-v1-user-userId-roles
+      responses:
+        '200':
+          description: OK
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                roles:
+                  type: array
+                  description: An array of role IDs to add
+                  uniqueItems: true
+                  minItems: 1
+                  maxItems: 10
+                  items:
+                    type: string
+              required:
+                - roles
+        description: ''
+      security:
+        - Bearer Token: []
+      parameters: []
+      description: Assign one or more roles to a user
+    delete:
+      summary: Remove User Roles
+      operationId: delete-v1-user-userId-roles
+      responses:
+        '200':
+          description: OK
+      description: Remove one or more roles from a user
+      security:
+        - Bearer Token: []
 components:
   schemas:
     User-Account:
@@ -451,5 +533,4 @@ components:
     Bearer Token:
       type: http
       scheme: bearer
-security:
-  - Bearer Token: []
+      description: ''
